--- a/project 2/index.html
+++ b/project 2/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <!--    Cool nandan here -->
+daksh was here 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
