--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="/1.png" alt="">
+                <img src="1.png" alt="">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et qui, repudiandae similique nam, recusandae quidem ab asperiores ex, aut fugit labore veritatis facere?
@@ -55,7 +55,7 @@
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
-                <img src="/2.png" alt="">
+                <img src="2.png" alt="">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
@@ -64,7 +64,7 @@
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
             <div class="box">
-                <img src="/3.png" alt="">
+                <img src="3.png" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus provident fugiat aliquam minima at explicabo. Earum eveniet quaerat, sunt molestias nesciunt quas! Quis.
@@ -77,17 +77,17 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="/logo1.png" alt="Our Client">
+                <img src="logo1.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="/logo2.png" alt="Our Client">
+                <img src="logo2.png" alt="Our Client">
             </div>
           
             <div class="client-item">
-                <img src="/logo4.png" alt="Our Client">
+                <img src="logo4.png" alt="Our Client">
             </div>
             <div class="client-item">
-                <img src="/logo3.png" alt="Our Client">
+                <img src="logo3.png" alt="Our Client">
             </div>
         </div>
 
@@ -124,7 +124,7 @@
         </div>
     </footer>
 
-    <script src="/js.js"></script>
+    <script src="js.js"></script>
 
     <script>
         let loader= document.getElementById("preloader")
